# motor_control_rpi3

./: .gitignore  CMakeLists.txt  README.md  adc.cpp  adc.hpp  alphabot_cfg.h  main.cpp  main.hpp  motor.hpp  motor_ctrl.cpp  motor_ctrl.hpp  pid.cpp  pid.hpp  remote_control.cpp  robot_move.cpp  robot_move.hpp  rotary_encoder.cpp  rotary_encoder.hpp  single_control.cpp  xbox_controller.cpp  xbox_controller.hpp
.github/workflows/: cmake-single-platform.yml
cmake/: FindLibevdev.cmake
tools/: plot.py
